# amazon-

./: README.md
amazon-scraper/: DEVELOPMENT.md  Dockerfile  README.md  config.yaml  cookies_manual.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
amazon-scraper/app/: __init__.py  config.py  logger.py
amazon-scraper/app/crawler/: cookie_manager.py  detail_crawler.py  list_crawler.py
amazon-scraper/app/monitor/: notifier.py  price_checker.py
amazon-scraper/app/parser/: __init__.py  detail_parser.py  list_parser.py
amazon-scraper/app/storage/: database.py  models.py  repository.py
amazon-scraper/app/web/: app.py  routes.py
amazon-scraper/app/web/templates/: base.html  dashboard.html  product.html
amazon-scraper/data/: amazon.db  cookies.json
amazon-scraper/tests/: test_detail_parser.py  test_list_parser.py
